tests/cases/match/errors/enum-case-semicolon.ari
enum OptionI32 {
  None;
  Some(i32),
}

fn main() -> i64 {
  return 0;
}
